smooth jump, fixed height issues

--- a/test.css
+++ b/test.css
@@ -1,7 +1,24 @@
 #block
 {
-  /*position: absolute;*/
-  width: 100px;
-  height: 100px;
+  width: 50px;
+  height: 80px;
+  /*background-color: black;*/
+  background: url(images/soldier1.png) no-repeat center center;
+  background-size: contain;
+}
+#health
+{
+  width: 50px;
+  height: 10px;
+  background-color: red;
+  margin-bottom: 5px;
+}
+#line
+{
+  position: absolute;
+  height: 5px;
+  width: 100vw;
+  bottom: 19vh;
+  left: 0;
   background-color: black;
 }
